<resources>

    <string name="app_name">StreetMarkets</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Street Markets</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_NoOfScans">No. of Scans?</string>
    <string name="text_price">Price</string>
    <string name="buttontext_Scan">Scan</string>
    <string name="buttontext_Send">Send</string>
    <string name="text_ScannedData">Scanned Data</string>
    <string name="text_MobileNumber">Send To:</string>

</resources>